Basic CRUD methods for repositories: users, trainers and reservations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://kandula.db.elephantsql.com:5432/wxclecpr
-spring.datasource.username=wxclecpr
-spring.datasource.password=kNYnCMtYhOJWBWCHbza-ZQ2aBzsI2ct9
+spring.datasource.url=jdbc:postgresql://kandula.db.elephantsql.com:5432/qxdxwotk?ApplicationName=GymReserver
+spring.datasource.username=qxdxwotk
+spring.datasource.password=oXApnwsd_lDs5F5VG407jaFA-k5iMsD4
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+spring.datasource.tomcat.max-active=3
+spring.datasource.tomcat.max-wait=1000
 
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
