--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "axios": "^0.19.2",
     "cra-template": "1.0.3",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
