--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,16 @@ plugins {
     id 'org.springframework.boot' version '2.3.1.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
+//    id 'com.moowork.node' version '1.3.1'
+//    id 'org.siouan.frontend' version '1.1.0'
 }
+
+//apply plugin: 'com.moowork.node'
+//apply plugin: 'com.google.cloud.tools.appengine'
 
 group = 'com.zti'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '14'
+sourceCompatibility = '11'
 
 repositories {
     mavenCentral()
@@ -22,8 +27,43 @@ dependencies {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.11.2'
+//    compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.4.0'
+//    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.3.3.RELEASE'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-gcp', version: '1.2.5.RELEASE', ext: 'pom'
+//    classpath 'com.google.cloud.tools:appengine-gradle-plugin:2.3.0'
 }
 
 test {
     useJUnitPlatform()
 }
+
+//frontend {
+//    nodeVersion = '10.15.3'
+//    // See 'scripts' section in your 'package.json file'
+//    cleanScript = 'run clean'
+//    assembleScript = 'run assemble'
+//    checkScript = 'run check'
+//}
+
+//node {
+//    version = '12.16.2'
+//    npmVersion = '6.14.4'
+//    download = true
+//}
+
+//project.ext.react = [
+//        entryFile: "Main.jsx"
+//]
+//
+//task buildReactApp(type: NodeTask, dependsOn: 'npmInstall') {
+//    script = project.file('node_modules/.bin/webpack')
+//    args = [
+//            '--mode', 'development',
+//            '--entry', './src/main/webapp/javascript/Main.jsx',
+//            '-o', './src/main/resources/static/dist/react-app.js'
+//    ]
+//}
+//
+//processResources.dependsOn 'buildReactApp'
+//clean.delete << file('node_modules')
+//clean.delete << file('src/main/resources/static/dist')
